k8s/nebula/apps/vpn-services/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vpn-services
  labels:
    vpn-routed-gateway: "true"
