k8s/nebula/apps/vpn-services/netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vpn-only
  namespace: vpn-services
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
    - fromEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/name: pod-gateway
            io.kubernetes.pod.namespace: vpn
      toPorts:
        - ports:
            - port: "8472"
              protocol: UDP
            - port: "68"
              protocol: UDP
    - fromEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/instance: nginx-internal
            io.kubernetes.pod.namespace: networking
        - matchLabels:
            k8s:app.kubernetes.io/instance: external-nginx
            io.kubernetes.pod.namespace: networking
  egress:
    - toEndpoints:
        - {}
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: coredns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/instance: nginx-internal
            io.kubernetes.pod.namespace: networking
        - matchLabels:
            k8s:app.kubernetes.io/instance: external-nginx
            io.kubernetes.pod.namespace: networking
      toPorts:
        - ports:
            - port: "443"
    - toEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/name: pod-gateway
            io.kubernetes.pod.namespace: vpn
      toPorts:
        - ports:
            - port: "8472"
              protocol: UDP
            - port: "67"
              protocol: UDP
    - icmps:
        - fields:
            - type: 8
              family: IPv4
